--- a/setting menu.html
+++ b/setting menu.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title></title>
-     <meta charset="utf-8">
+     <meta charset="utf-8"> 
+	<meta charset="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
