--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <!-- <div ng-include="'app/Hod/Setting/Create Admin Approve/CreateAdmin.html'" style="padding-top: 100px;"></div>  -->
 <!-- <div ng-include="'app/Hod/Setting/Add Year Subject/AddYearSub.html'" style="padding-top: 100px;"></div>
  --><!-- <div ng-include="'app/Hod/Setting/Add Subject Teacher/AddSubTech.html'" style="padding-top: 100px;"></div> -->
- <div ng-include="'app/Student/StuReg.html'" style="padding-top: 100px;"></div>  
-<!-- <div ng-include="'app/Hod/Setting/setting.html'" style="padding-top: 100px;"></div>  
- --><div ng-include="'app/footer.html'"></div>
+<!--  <div ng-include="'app/Student/StuReg.html'" style="padding-top: 100px;"></div>  --> 
+<div ng-include="'app/Hod/Setting/setting.html'" style="padding-top: 100px;"></div>  
+<div ng-include="'app/footer.html'"></div>
 </body>
 
 </html>
